k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
spec:
  rules:
    - host: http://13.200.214.77
      http:
        - paths:
          path: /
          pathType: Prefix
          backend:
            service:
              name: flask-app
              port:
                number: 5000
